--- a/Pages/Authentication/Login.razor
+++ b/Pages/Authentication/Login.razor
@@ -3,51 +3,69 @@
 @page "/login"
 
 @attribute [AllowAnonymous]
-<h3>Login</h3>
 
-<AuthorizeView Context="authContext">
-    <Authorized>
-        <div class="alert alert-success">Você está logado como @authContext.User.Identity?.Name.</div>
-    </Authorized>
-    <NotAuthorized>
-        <div class="row">
-            <div class="col-xxl-4 col-xl-5 col-lg-7 col-md-9 col-sm-11 col-xs-12">
-                <section>
-                    <EditForm Model="@_tokenModel" method="post" FormName="Bem vindo ao Modulum =)" OnValidSubmit="DoLoginAsync">
+<MudContainer Class="mt-4 mb-8" MaxWidth="MaxWidth.ExtraSmall">
+    <AuthorizeView Context="authContext">
+        <Authorized>
+            <MudAlert Severity="Severity.Success">Você está logado como @authContext.User.Identity?.Name.</MudAlert>
+        </Authorized>
+        <NotAuthorized>
+            <MudOverlay @bind-Visible="@loading" DarkBackground="true" Absolute="true">
+                <modulum.Shared.Loading />
+            </MudOverlay>
+            <EditForm Model="@_tokenModel" method="post" FormName="Bem vindo ao Modulum =)" OnValidSubmit="DoLoginAsync">
+                <MudCard Class="px-4 pt-0 pb-4">
+                    <MudImage Src="logo_512x512.png" Alt="Syki" Elevation="25" Class="rounded-lg mx-20 mt-10 mb-5"/>
+                    <MudCardContent>
                         <FluentValidationValidator @ref="_fluentValidationValidator" />
                         <FormValidator @ref="_loginFormValidator"></FormValidator>
-                        <h2>Use uma conta local para entrar.</h2>
-                        <hr />
-                        <ValidationSummary />
-                        <div class="form-floating mb-3">
-                            <InputText @bind-Value="_tokenModel.Email" For="@(() => _tokenModel.Email)" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                            <label for="email" class="form-label">Email</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <InputText type="password" @bind-Value="_tokenModel.Password" For="@(() => _tokenModel.Password)" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                            <label for="password" class="form-label">Senha</label>
-                        </div>
-                        <div>
-                            <button class="w-100 btn btn-lg btn-primary" @onclick="DoLoginAsync" disabled="@loading">
-                                @if (loading)
-                                {
-                                    <span class="spinner-border spinner-border-sm mr-1"></span>
-                                    @textoBotao
-                                } 
-                                else
-                                {
-                                    @textoBotao
-                                }
-                            </button>
-                        </div>
-                    </EditForm>
-                </section>
-            </div>
-            <div class="col-md-6 col-md-offset-2">
-                <section>
-            
-                </section>
-            </div>
-        </div>
-    </NotAuthorized>
-</AuthorizeView>
+                        <MudText Color="@Color.Error">
+                            <!--<MudText Color="@Color.Error">
+                                <ValidationSummary />
+                            </MudText>-->
+                        </MudText>
+                        <MudTextField
+                            InputType="InputType.Email"
+                            Margin="Margin.Dense"
+                            AutoFocus="true"
+                            Label="Email"
+                            Class="mt-0 pb-3"
+                            OnlyValidateIfDirty="true"
+                            @bind-Value="@_tokenModel.Email"
+                            Variant="Variant.Outlined"
+                            Required="true"
+                            RequiredError="Informe!"
+                            For="@(() => _tokenModel.Email)" />
+                        <MudTextField Margin="Margin.Dense"
+                            Adornment="Adornment.End"
+                            AdornmentIcon="@_passwordIcon"
+                            OnAdornmentClick="@PasswordIconClick"
+                            InputType="@_passwordInputType"
+                            Label="Senha"
+                            Class="@Class"
+                            Immediate="true"
+                            OnlyValidateIfDirty="true"
+                            Variant="Variant.Outlined"
+                            Required="@Required"
+                            RequiredError="Informe!"
+                            @bind-Value="@_tokenModel.Password"
+                            For="@(() => _tokenModel.Password)" />
+                    </MudCardContent>
+                    <MudCardActions Class="justify-center">
+                        <MudStack Spacing="1">
+                            <MudButton
+                                Size="Size.Large"
+                                OnClick="@DoLoginAsync"
+                                Variant="Variant.Filled"
+                                Color="Color.Primary"
+                                Class="mx-auto mb-4 px-12">
+                                Entrar
+                            </MudButton>
+                            <MudLink Href="/reset-password-token">Esqueci minha senha</MudLink>
+                        </MudStack>
+                    </MudCardActions>
+                </MudCard>
+            </EditForm>
+        </NotAuthorized>
+    </AuthorizeView>
+</MudContainer>
