teste nova identidade visual

--- a/Components/Indexes/IndexAnonymous.razor
+++ b/Components/Indexes/IndexAnonymous.razor
@@ -10,7 +10,7 @@
                 Escola, Estacionamento, Eventos, Estoque: tudo integrado de maneira fácil e intuitiva.
             </MudText>
 
-            <MudButton
+            <MudButton 
                 Class="px-8"
                 EndIcon="@Icons.Material.Filled.ArrowForward"
                 IconSize="Size.Large"
@@ -26,7 +26,7 @@
         </MudItem>
 
         <MudItem xs="12" sm="12" md="8" lg="8">
-            <MudPaper Class="pa-4" Elevation="3">
+            <MudPaper Outlined="true" Class="pa-4" Elevation="3">
                 @if (IsDarkTheme)
                 {
                     <img src="modulum_home_dark.png" width="100%">
