--- a/Pages/Authentication/Login.razor
+++ b/Pages/Authentication/Login.razor
@@ -14,7 +14,7 @@
                 <modulum.Shared.Loading />
             </MudOverlay>
             <EditForm Model="@_tokenModel" method="post" FormName="Bem vindo ao Modulum =)" OnValidSubmit="DoLoginAsync">
-                <MudCard Class="px-4 pt-0 pb-4">
+                <MudCard Outlined="true" Class="px-4 pt-0 pb-4">
                     <MudImage Src="logo_512x512.png" Alt="Syki" Elevation="25" Class="rounded-lg mx-20 mt-10 mb-5"/>
                     <MudCardContent>
                         <FluentValidationValidator @ref="_fluentValidationValidator" />
